<resources>
    <string name="app_name">To Do Manager</string>
    <string name="activity_main">To Do Manager</string>
    <string name="activity_add_todo">Add/Edit To Do</string>

    <string name="textview_empty">There is no To Do Items yet</string>

    <string name="action_add">Add To Do</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_all">Delete all</string>
    <string name="action_edit">Edit</string>
    <string name="action_dump">Dump to log</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="done_string">Done</string>
    <string name="priority_string">Priority: </string>
    <string name="add_new_todo_item_string">Add New ToDo Item</string>
    <string name="title_string">Title: </string>
    <string name="description_string">Description: </string>
    <string name="status_string">Status: </string>
    <string name="not_done_string">Not Done</string>
    <string name="priority_low_string">Low</string>
    <string name="priority_medium_string">Medium</string>
    <string name="priority_high_string">High</string>
    <string name="time_and_date_string">Date and Time: </string>
    <string name="no_date_set_string">0000&#8211;00&#8211;00</string>
    <string name="no_time_set_string">00:00:00</string>
    <string name="choose_date_string">Choose Date</string>
    <string name="choose_time_string">Choose Time</string>
    <string name="cancel_string">Cancel</string>
    <string name="reset_string">Reset</string>
    <string name="submit_string">Submit</string>
    <string name="enter_title_string">Enter Title</string>
    <string name="enter_description_string">Enter Description</string>
</resources>
