<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- Title -->
        <TextView
            android:id="@+id/TitleLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_string"
            android:textAppearance="?android:attr/textAppearanceLarge" >
        </TextView>
        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/TitleLabel"
            android:layout_marginTop="12dp"
            android:hint="@string/enter_title_string"
            android:inputType="textShortMessage">
            <requestFocus />
        </EditText>

        <!-- Description -->
        <TextView
            android:id="@+id/descriptionLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_string"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/title"
            android:textAppearance="?android:attr/textAppearanceLarge" >
        </TextView>
        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/descriptionLabel"
            android:layout_marginTop="12dp"
            android:hint="@string/enter_description_string"
            android:inputType="textLongMessage">
        </EditText>

        <!-- Status -->
        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/description"
            android:layout_marginTop="12dp"
            android:text="@string/status_string"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <RadioGroup
            android:id="@+id/statusGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/status"
            android:orientation="horizontal"
            android:layout_marginTop="12dp" >
            <RadioButton
                android:id="@+id/statusDone"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/done_string" />
            <RadioButton
                android:id="@+id/statusNotDone"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/not_done_string" />
        </RadioGroup>

        <!-- Priority -->
        <TextView
            android:id="@+id/priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/statusGroup"
            android:layout_marginTop="12dp"
            android:text="@string/priority_string"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <RadioGroup
            android:id="@+id/priorityGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/priority"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            android:text="@string/priority_string" >
            <RadioButton
                android:id="@+id/lowPriority"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/priority_low_string" />
            <RadioButton
                android:id="@+id/medPriority"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/priority_medium_string" />
            <RadioButton
                android:id="@+id/highPriority"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/priority_high_string" />
        </RadioGroup>

        <!-- Time and Date -->
        <TextView
            android:id="@+id/time_and_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/priorityGroup"
            android:layout_marginTop="12dp"
            android:text="@string/time_and_date_string"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:id="@+id/date"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/time_and_date"
            android:layout_marginTop="12dp"
            android:text="@string/no_date_set_string" />
        <TextView
            android:id="@+id/time"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/time_and_date"
            android:layout_marginTop="12dp"
            android:text="@string/no_time_set_string" />

        <!-- Buttons -->
        <Button
            android:id="@+id/cancelButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="24dp"
            android:layout_below="@+id/date"
            android:text="@string/cancel_string" />
        <Button
            android:id="@+id/resetButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:layout_below="@+id/date"
            android:text="@string/reset_string" />
        <Button
            android:id="@+id/submitButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="24dp"
            android:layout_below="@+id/date"
            android:text="@string/submit_string" />
    </RelativeLayout>
</ScrollView>