<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textAppearance="?android:attr/textAppearanceLarge" >
    </TextView>

    <TextView
        android:id="@+id/descriptionView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/titleView"
        android:textAppearance="?android:attr/textAppearanceSmall" >
    </TextView>

    <TextView
        android:id="@+id/StatusLabel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/statusCheckBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/descriptionView"
        android:text="@string/done_string" >
    </TextView>

    <CheckBox
        android:id="@+id/statusCheckBox"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descriptionView"
        android:layout_toRightOf="@+id/StatusLabel"
        android:layout_toEndOf="@+id/StatusLabel"
        android:focusable="false">
    </CheckBox>

    <TextView
        android:id="@+id/PriorityLabel"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/statusCheckBox"
        android:layout_alignTop="@+id/StatusLabel"
        android:layout_toLeftOf="@+id/priorityView"
        android:layout_toStartOf="@+id/priorityView"
        android:text="@string/priority_string" >
    </TextView>

    <TextView
        android:id="@+id/priorityView"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/statusCheckBox"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/StatusLabel" >
    </TextView>

    <TextView
        android:id="@+id/DateLabel"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/statusCheckBox"
        android:text="@string/time_and_date_string" >
    </TextView>

    <TextView
        android:id="@+id/dateView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/DateLabel"
        android:layout_toRightOf="@+id/DateLabel"
        android:layout_toEndOf="@+id/DateLabel">
    </TextView>
</RelativeLayout>